[workspace]
members = [
    "tdn",
    "types",
    "did",
    "storage",
]

# # DEBUG patch.
# [patch.crates-io]
# chamomile = { git = "https://mariuszmalek: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@github.com/HeyApplication/chamomile" }
# chamomile_types = { git = "https://mariuszmalek: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@github.com/HeyApplication/chamomile" }